--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "remark": "13.0.0",
     "remark-behead": "2.3.3",
     "remark-heading-gap": "~4.0.0",
-    "remark-html": "~13.0.1",
-    "remark-mermaid": "~0.2.0",
-    "remark-slug": "~6.0.0",
-    "remark-toc": "~7.0.0",
+    "remark-html": "13.0.1",
+    "remark-mermaid": "0.2.0",
+    "remark-slug": "6.0.0",
+    "remark-toc": "7.0.0",
     "to-vfile": "6.1.0",
-    "unist-util-select": "~3.0.4",
-    "unist-util-visit": "~2.0.3"
+    "unist-util-select": "3.0.4",
+    "unist-util-visit": "2.0.3"
   },
   "engines": {
     "node": ">=12"
