--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 Andre 'Staltz' Medeiros
+#
+# SPDX-License-Identifier: Unlicense
+
 node_modules
 pnpm-lock.yaml
 index.html
